inclusão dos botões de login e logout nas páginas

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,6 +4,9 @@
     <title>Painel de Administração</title>
 </head>
 <body>
+    <!-- Incluir o template do cabeçalho -->
+    {% include 'header.html' %}
+    
     <h1>Painel de Administração</h1>
 
     <h2>Adicionar/Editar Veículo</h2>
