--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <title>Aluguel de Veículos</title>
 </head>
 <body>
+    <!-- Incluir o template do cabeçalho -->
+    {% include 'header.html' %}
+    
     <h1>Bem-vindo ao nosso website de aluguel de veículos!</h1>
     <h2>Veículos Disponíveis:</h2>
     <ul>
