--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,9 @@
     <title>Login do Administrador</title>
 </head>
 <body>
+    <!-- Incluir o template do cabeçalho -->
+    {% include 'header.html' %}
+    
     <h1>Login do Administrador</h1>
     <form action="/login" method="POST">
         <label for="username">Usuário:</label>
