--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,17 @@
     <title>Aluguel de Veículos</title>
 </head>
 <body>
-        
+    <!-- Botões de login/logout do cliente -->
+    {% if 'client' in session %}
+        <div style="text-align: right;">
+            <a href="{{ url_for('client_logout') }}">Logout</a>
+        </div>
+    {% else %}
+        <div style="text-align: right;">
+            <a href="{{ url_for('client_login') }}">Login do Cliente</a>
+        </div>
+    {% endif %}
+
     <h1>Bem-vindo ao nosso website de aluguel de veículos!</h1>
     <h2>Veículos Disponíveis:</h2>
     <ul>
