Criação página de login para o cliente

--- a/templates/client_login.html
+++ b/templates/client_login.html
@@ -5,8 +5,8 @@
     <title>Login do Cliente</title>
 </head>
 <body>
-    <!-- Incluir o template do cabeçalho -->
-    {% include 'header.html' %}
+    <!-- Incluir o template do cabeçalho específico para o login do cliente -->
+    {% include 'client_header.html' %}
 
     <h1>Login do Cliente</h1>
     <form method="POST" action="/client_login">
