--- a/templates/client_header.html
+++ b/templates/client_header.html
@@ -3,8 +3,16 @@
     <a href="{{ url_for('index') }}">Início</a>
 </div>
 
+<div>
+    {% if cliente %}
+        <span>Bem-vindo(a), {{ cliente['nome'] }}!</span>
+    {% else %}
+        <a href="{{ url_for('register_client') }}">Registrar-se</a>
+    {% endif %}
+</div>
+
 <div style="text-align: right;">
-    {% if 'client' in session %}
+    {% if cliente %}
         <a href="{{ url_for('client_logout') }}">Logout</a>
     {% else %}
         <a href="{{ url_for('client_login') }}">Login do Cliente</a>
